# r3dairy

./: .gitignore  ANALYSIS.md  BROWSER_LOGIN_TEST_COMPLETE.md  CLAUDE.md  CORS_PROXY_SOLUTION.md  PDF_LINUX_VALIDATION.md  PORT_3000_SERVER.md  README.md  SAJU_ENGINE_FIX.md  SAJU_FIX_COMPLETE.md  browser-simulation-test.js  docker-compose.yml  final_test.py  render.yaml  test_daily_auth.py  test_daily_complete.py
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Aptfile  DAILY_API_UPDATE_SUMMARY.md  Dockerfile  GENERATION_STATUS.md  IMPLEMENTATION_GUIDE.md  MIGRATION_SUMMARY.md  SURVEY_DB_SETUP.md  (+21 more)
diary/: .gitattributes  .gitignore  README.md  pyproject.toml
diary-gen/: README.md  pyproject.toml
diary-gen/_archive_prompts/: README.md
diary-gen/src/diary_gen/content/: schema.json
diary-gen/src/diary_gen/render/static/: styles.css
diary-gen/src/diary_gen/render/templates/: right_page_fragment.html
diary/.cache/content/d32d46b7b3ff/: 2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-19.json  2026-05-20.json  2026-05-21.json
diary/diary/: __init__.py  __main__.py  batch.py  cli.py  content.py  customer.py  models.py  pipeline.py  qimen.py  render.py  retry.py  saju.py  web.py
diary/diary/prompts/: daily.md  daily.md.m14.bak
diary/diary/static/: styles.css
diary/diary/static/web/: styles.css
diary/diary/templates/: diary.html
diary/diary/templates/web/: calendar.html  day.html  index.html
diary/docs/: DEPLOY.md  PRINT_CHECKLIST.md
diary/samples/: full_pipeline_sample.py  generate_sample.py  render_sample.py  sample_customers.csv
diary/tests/: test_batch.py  test_cli.py  test_content.py  test_daily_best_qimen.py  test_e2e.py  test_lucky_hours_parse.py  test_m25_ilji_reflection.py  test_m26_1_opener.py  test_m26_2_polish.py  test_m26_content_quality.py  test_pipeline.py  test_qimen.py  test_qimen_accuracy.py  test_render.py  test_retry.py  test_saju_accuracy.py  test_web.py  test_workday_lucky.py  test_yongsin_qimen.py
(+366 files in other folders)
