[project]
name = "diary-gen"
version = "0.1.0"
description = "Print-ready saju-based daily diary generator (1 customer = 1 book)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "weasyprint>=60.0",
    "click>=8.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "datamodel-code-generator>=0.25",
]

[project.scripts]
diary-gen = "diary_gen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diary_gen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
