[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diary"
version = "0.1.0"
description = "Saju-driven print diary generator (Python pipeline)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "weasyprint>=60.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pypdf>=4.0",
]

[project.scripts]
diary = "diary.cli:main"

[tool.setuptools.packages.find]
include = ["diary*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
